--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,10 +18,18 @@ spring:
     user:
       name: user
       password: disabled
+  mvc:
+    cors:
+      allowed-origins: "*"
+      allowed-methods: GET,POST,PUT,DELETE,OPTIONS
+      allowed-headers: "*"
+      allow-credentials: true
+      max-age: 3600
 
 server:
   port: 8080
 
 logging:
   level:
-    org.springframework.security: DEBUG 
+    org.springframework.security: DEBUG
+    org.springframework.web: DEBUG 
