--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,13 +2,13 @@ spring:
   application:
     name: inventory
   datasource:
-    url: jdbc:postgresql://localhost:5432/postgres
+    url: jdbc:postgresql://localhost:5432/inventory_db
     username: postgres
     password: 123
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
@@ -20,11 +20,17 @@ spring:
       password: disabled
   mvc:
     cors:
-      allowed-origins: "*"
+      allowed-origins: "http://localhost:5173"
       allowed-methods: GET,POST,PUT,DELETE,OPTIONS
       allowed-headers: "*"
       allow-credentials: true
       max-age: 3600
+    contentnegotiation:
+      favor-parameter: false
+      favor-path-extension: false
+      defaultContentType: application/json
+      media-types:
+        json: application/json
   devtools:
     restart:
       enabled: true
